--- a/index.html
+++ b/index.html
@@ -1,20 +1,110 @@
-<!DOCTYPE html>
-<html lang="en"></html>
-    <html>
-    <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <meta http-equiv="X-UA-Compatible" content="ie=edge">
-            <title> My Google Map </title>
-            <style> 
-                    html { height: 100% }
-                    body { height: 100%; margin: 0px; padding: 0px; font-family: "Lato", sans-serif }
-            </style>
-            {{mymap.js}}
-    </head>
-    <body>
-        <h1>Flask Google Maps Example</h1>
-        <h2> First map generated in view</h2>
-        {{mymap.html}}
-    </body>
+<html lang="en">
+<head>
+  <title> Algoritmo Genetico </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+  <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>                        
+          </button>
+          <a class="navbar-brand" href="#"> Proyecto </a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#"> Inicio </a></li>
+            <li class="dropdown">
+              <!-- <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a> -->
+              <ul class="dropdown-menu">
+                <!-- <li><a href="#">Page 1-1</a></li>  -->
+              </ul>
+            </li>
+            <!-- <li><a href="#">Page 2</a></li> -->
+          </ul>
+        </div>
+      </div>
+  </nav>
+
+<div class="container">
+  <h2> Parametros: </h2>
+  <form class="form-horizontal" action="/map">
+    <div class="form-group">
+    <label class="control-label col-sm-2" for="numPopulation">Numero de poblaciones:</label>
+    <div class="col-sm-10">
+      <input type="number" class="form-control" id="numPopulation" placeholder="Ingrese el numero de poblaciones" name="numPopulation">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="populationSize">Tamaño de las poblaciones:</label>
+    <div class="col-sm-10">          
+      <input type="number" class="form-control" id="populationSize" placeholder="Ingrese el tamaño para cada poblacion" name="populationSize">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="numGenerations"> Número de generaciones: </label>
+    <div class="col-sm-10">          
+      <input type="number" class="form-control" id="numGenerations" placeholder="Ingrese el numero de generaciones" name="numGenerations">
+    </div>
+  </div>
+
+  <div class="form-group">
+      <label class="control-label col-sm-2" for="tournamentSize"> Tamaño del torneo </label>
+      <div class="col-sm-10">          
+        <input type="number" class="form-control" id="tournamentSize" placeholder="Ingrese el tamaño del torneo" name="tournamentSize">
+      </div>
+  </div>
+
+  <div class="form-group">
+      <label class="control-label col-sm-2" for="numSurvivors"> Sobrevivientes del torneo </label>
+      <div class="col-sm-10">          
+        <input type="number" class="form-control" id="numSurvivors" placeholder="Ingrese la cantidad de supervivientes para el torneo" name="numSurvivors">
+      </div>
+  </div>
+
+  <div class="form-group">
+      <label class="control-label col-sm-2" for="pMutation"> Probabilidad de mutacion </label>
+      <div class="col-sm-10">          
+        <input type="number" class="form-control" id="pMutation" placeholder="Ingrese la probabiblidad de mutacion" name="pMutation">
+      </div>
+  </div>
+
+  <div class="form-group">
+      <label class="control-label col-sm-2" for="pMigration"> Probabilidad de migracion </label>
+      <div class="col-sm-10">          
+        <input type="number" class="form-control" id="pMigration" placeholder="Ingrese la probabilidad de migracion" name="pMigration">
+      </div>
+  </div>
+
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="pMigrationPoblation"> Porcentage de Poblacion migrable </label>
+    <div class="col-sm-10">          
+      <input type="number" class="form-control" id="pMigrationPoblation" placeholder="Ingrese el porcentage de la poblacion migrable" name="pMigrationPoblation">
+    </div>
+</div>
+
+  <div class="form-group">
+      <label class="control-label col-sm-2" for="numSolutions"> Numero de soluciones </label>
+      <div class="col-sm-10">          
+        <input type="number" class="form-control" id="numSolutions" placeholder="Ingrese el numero de soluciones" name="numSolutions">
+      </div>
+  </div>
+
+  <div class="form-group">        
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Submit</button>
+    </div>
+  </div>
+  </form>
+</div>
+
+</body>
 </html>
