Correcion de delay algoritmo y mejora visual

--- a/index.html
+++ b/index.html
@@ -9,28 +9,31 @@
 </head>
 <body>
   <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>                        
-          </button>
-          <a class="navbar-brand" href="#"> Proyecto </a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#"> Inicio </a></li>
-            <li class="dropdown">
-              <!-- <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a> -->
-              <ul class="dropdown-menu">
-                <!-- <li><a href="#">Page 1-1</a></li>  -->
-              </ul>
-            </li>
-            <!-- <li><a href="#">Page 2</a></li> -->
-          </ul>
-        </div>
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+        </button>
+        <a class="navbar-brand" href="#">Proyecto</a>
       </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Inicio</a></li>
+          <!-- <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Page 1-1</a></li>
+            </ul>
+          </li> -->
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><span class="glyphicon glyphicon-upload"></span> Cargar </a></li>
+          <!-- <li><a href="/getCSV"><span id="downdload" class="glyphicon glyphicon-download-alt"></span> Descargar </a></li> -->
+        </ul>
+      </div>
+    </div>
   </nav>
 
 <div class="container">
@@ -100,11 +103,10 @@
 
   <div class="form-group">        
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-success"> Iniciar </button>
     </div>
   </div>
   </form>
 </div>
-
 </body>
 </html>
